syntax = "proto3";

package helloworld.v1;

// Our buf.yaml's "deps" make this available, like Gradle or npm would in other
// languages.
import "buf/validate/validate.proto";

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
}

// The request message containing the user's name.
message SayHelloRequest {
  string name = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }];
}

// The response message containing the greetings
message SayHelloResponse {
  string message = 1;
}
